--- a/index.html
+++ b/index.html
@@ -9,15 +9,33 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="container">
-        <h3>Dont Laugh Challenge</h3>
-        <div class="joke" id="joke"></div>
 
-        <div>
-            <!-- //joke goes here -->
+  
+
+
+    <!-- login page  -->
+<section>   
+    <form action="" >
+        <div class="signin">
+
+            <div class="loginContainer">
+                <label name="log">USERNAME</label>
+                <input type="text" name="username"placeholder="type here" />
+            </div>
+
+            <div class="passwordContainer">
+                <label name="pass">PASSWORD</label>
+                <input type="text" name ="password" placeholder="type here" />
+            </div>
+
+            <a href="joke.html" id="submit">
+                <button type="button" id="submitContainer">Register</button>
+           </a>
         </div>
-        <button id="jokebtn" class="btn">Another joke</button>
-    </div>
+    </form>
+</section>
+<!-- end of login page -->
+
 
     <script src="./script.js"></script>   
 </body>
