--- a/joke.html
+++ b/joke.html
@@ -11,7 +11,7 @@
 <body>
       <!-- joke cards -->
     <div class="container">
-        <h3>Dont Laugh Challenge</h3>
+        <h3>Don't Laugh Challenge</h3>
         <div class="joke" id="joke"></div>
 
        
